--- a/docs/index.css
+++ b/docs/index.css
@@ -56,7 +56,7 @@ button {
     border-style: double;
 }
 html {
-    background-color: darksalmon;
+    background-color: blue;
     border: 4em;
     font-family: Arial, Helvetica, sans-serif;
     font: normal;
@@ -64,7 +64,7 @@ html {
     border: darkgreen;
 }
 blockquote {
-    background-image: unset;
+    background-image: set;
     font-style: italic;
     align-content: center;}
 
