--- a/docs/index.css
+++ b/docs/index.css
@@ -56,7 +56,7 @@ button {
     border-style: double;
 }
 html {
-    background-color: blue;
+    background-color: none;
     border: 4em;
     font-family: Arial, Helvetica, sans-serif;
     font: normal;
