--- a/docs/index.css
+++ b/docs/index.css
@@ -1,6 +1,7 @@
 .li { 
-    text-align:center;
-    color: peru;
+    front-weight: bold
+   
+    color: black;
     list-style-type: none;
     align-items: inline;
     background-color: brown;
